[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Obstacles/Shooter-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Envirment/Obstales/Shooter.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 5 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 12, 10 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Shoot",
"speed": 10.0
} ]

[node name="Shooter" type="StaticBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "Shoot"

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -4, -2.5 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 0 )

[node name="CoolTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="CoolTimer" to="." method="_on_CoolTimer_timeout"]
